# crypto-market-data-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
infra/: template.yaml
src/: consumer.py  producer.py  producer_firehose.py
src/jobs/: bronze_to_silver_etl.py  firehose_bronze_to_silver_etl.py
