[project]
name = "crypto-market-data-pipeline"
version = "0.1.0"
description = "Real-time Crypto streaming pipeline POC"
authors = [
    {name = "Evan G"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "confluent-kafka (>=2.13.2,<3.0.0)",
    "websocket-client (==1.7.0)",
    "boto3 (==1.34.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
